demo werkt niet in static file hosting ipv handcraft

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p>
           Just include Live.js and it will monitor the current page including local CSS and Javascript by sending consecutive HEAD requests
           to the server. Changes to CSS will be applied dynamically and HTML or Javascript changes will reload the page.
-          <a href="/demo" target="_blank">Try it!</a></p>
+          <!-- <a href="/demo" target="_blank">Try it!</a> --></p>
       <h2>Where?</h2>
       <p>
           Live.js works in Firefox, Chrome, Safari, Opera and IE6+ until proven otherwise.
