--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             (using Live.js as a bookmarklet will only monitor CSS changes)
           </span></p>
     </div>
-    <div id="banner">
+<!--     <div id="banner">
       <p id="demo"><a href="/demo" target="_blank">demo →        click here!</a></p>
     </div>
-    <div class="bottom">
+ -->    <div class="bottom">
       <h2>How?</h2>
       <p>
           Just include Live.js and it will monitor the current page including local CSS and Javascript by sending consecutive HEAD requests
